--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,19 +1,14 @@
-# Configuración del proyecto para SonarQube
-sonar.projectKey=donation-app
-sonar.projectName=Sistema de Gestión de Donaciones
-sonar.projectVersion=1.0
+sonar.projectKey=SilverCoyote012_IngieneriaSoftwareProyecto
+sonar.organization=silvercoyote012
 
 # Directorios de código fuente
 sonar.sources=backend,frontend/js
 
 # Exclusiones
-sonar.exclusions=**/node_modules/**,**/coverage/**,**/backend/tests/**,**/*.test.js,**/backend/server.js
+sonar.exclusions=**/node_modules/**,**/coverage/**,**/backend/tests/**,**/*.test.js
 
 # Cobertura de pruebas
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
-# Codificación del código fuente
+# Codificación
 sonar.sourceEncoding=UTF-8
-
-# Configuración de lenguaje
-sonar.language=js
