--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -23,7 +23,7 @@ jobs:
         run: npm install
       
       - name: Run tests with coverage
-        run: npm test
+        run: npm test -- --coverage --coverageReporters=lcov
       
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
